# aeski

./: Cargo.toml
benches/: image_creation.rs  mona_lisa.rs
examples/: from_width_4_bit.rs  from_width_8_bit.rs  simple.rs  simple_with_width.rs
src/: cell.rs  font.rs  image.rs  lib.rs  rounded_div.rs  sgr.rs  tests.rs
src/color/: ansi_24_bit.rs  ansi_3_bit.rs  ansi_4_bit.rs  ansi_8_bit.rs  colorless.rs  mod.rs  util.rs  variants.rs
src/color/ansi_8_bit/: cube.rs  cube_coordinate.rs  grayscale.rs
