[package]
name = "aeski"
version = "0.1.0"
authors = ["SLUCHABLUB"]
edition = "2021"

[dependencies]
image = "0.25.2"
itertools = "0.13.0"
num-traits = "0.2.19"
num-rational = "0.4.2"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
enum-iterator = "2.1.0"

[[bench]]
name = "image_creation"
harness = false
